Adding second service and updating DLL files.

--- a/Web.config
+++ b/Web.config
@@ -1,52 +1,75 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0"?>
 <configuration>
   <appSettings>
-    <add key="aspnet:UseTaskFriendlySynchronizationContext" value="true" />
+    <add key="aspnet:UseTaskFriendlySynchronizationContext" value="true"/>
   </appSettings>
   <system.web>
-    <compilation targetFramework="4.7" />
-    <httpRuntime targetFramework="4.7" />
+    <compilation targetFramework="4.7" debug="true"/>
+    <httpRuntime targetFramework="4.7"/>
   </system.web>
   <system.serviceModel>
+    <diagnostics>
+      <messageLogging logEntireMessage="true" logMessagesAtServiceLevel="true" logMessagesAtTransportLevel="true"/>
+      <endToEndTracing propagateActivity="true" activityTracing="true" messageFlowTracing="true"/>
+    </diagnostics>
     <bindings>
       <webHttpBinding>
-        <binding name="AjaxBinding" />
+        <binding name="AjaxBinding"/>
       </webHttpBinding>
     </bindings>
     <behaviors>
       <!--Add a new behavior for allowing JavaScript to access the web-->
       <endpointBehaviors>
         <behavior name="AjaxBehavior">
-          <enableWebScript />
+          <enableWebScript/>
         </behavior>
       </endpointBehaviors>
       <serviceBehaviors>
         <behavior>
           <!-- To avoid disclosing metadata information, set the values below to false before deployment -->
-          <serviceMetadata httpGetEnabled="true" httpsGetEnabled="true" />
+          <serviceMetadata httpGetEnabled="true" httpsGetEnabled="true"/>
           <!-- To receive exception details in faults for debugging purposes, set the value below to true.  Set to false before deployment to avoid disclosing exception information -->
-          <serviceDebug includeExceptionDetailInFaults="false" />
+          <serviceDebug includeExceptionDetailInFaults="false"/>
         </behavior>
       </serviceBehaviors>
     </behaviors>
     <protocolMapping>
-      <add binding="basicHttpsBinding" scheme="https" />
+      <add binding="basicHttpsBinding" scheme="https"/>
     </protocolMapping>
-    <serviceHostingEnvironment aspNetCompatibilityEnabled="true" multipleSiteBindingsEnabled="true" />
+    <serviceHostingEnvironment aspNetCompatibilityEnabled="true" multipleSiteBindingsEnabled="true"/>
     <services>
       <!--Make this service accessable from an AJAX quarry on the web-->
       <service name="GoogleDistance_DriveTime.Service1">
-        <endpoint address="ajaxEndpoint" behaviorConfiguration="AjaxBehavior" binding="webHttpBinding" bindingConfiguration="AjaxBinding" contract="GoogleDistance_DriveTime.IService1"></endpoint>
+        <endpoint address="ajaxEndpoint" behaviorConfiguration="AjaxBehavior" binding="webHttpBinding" bindingConfiguration="AjaxBinding" contract="GoogleDistance_DriveTime.IService1"/>
+      </service>
+      <service name="GoogleCityElevation.Service2">
+        <endpoint address=""
+          behaviorConfiguration="AjaxBehavior"
+          binding="webHttpBinding"
+          bindingConfiguration="AjaxBinding"
+          contract="GoogleCityElevation.IService2">
+        </endpoint>
       </service>
     </services>
   </system.serviceModel>
   <system.webServer>
-    <modules runAllManagedModulesForAllRequests="true" />
+    <modules runAllManagedModulesForAllRequests="true"/>
     <!--
         To browse web app root directory during debugging, set the value below to true.
         Set to false before deployment to avoid disclosing web app folder information.
       -->
-    <directoryBrowse enabled="true" />
+    <directoryBrowse enabled="true"/>
   </system.webServer>
+  <system.diagnostics>
+    <sources>
+      <source name="System.ServiceModel"
+              switchValue="Information, ActivityTracing" propagateActivity="true">
+        <listeners>
+          <add name="traceListener"
+              type="System.Diagnostics.XmlWriterTraceListener" initializeData="wcf_trace_log.svclog" />
+        </listeners>
+      </source>
+    </sources>
+  </system.diagnostics>
 </configuration>
 <!--ProjectGuid: 40920C90-04DF-4130-96A9-9D90E1AC8CF1-->
